--- a/index.html
+++ b/index.html
@@ -18,70 +18,74 @@
   <main>
     <header>
       <img src="assets/images/image-omelette.jpeg" alt="">
-      <h1>Simple Omelette Recipe</h1>
-      <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese,vegetables, or meats.</p>
     </header>
-    <section id="prep">
-      <H2>Preparation time</H2>
-      <ul>
-        <li><b>Total:</b>Approximately 10 minutes</li>
-        <li><b>Preparation:</b>5 minutes</li>
-        <li><b>Cooking:</b>5 minutes</li>
-      </ul>
-    </section>
-    <section >
-      <h2>Ingredients</h2>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Instructions</h2>
-      <ol>
-        <li><b>Beat the eggs:</b>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+    <article>
+      <header>
+        <h1>Simple Omelette Recipe</h1>
+        <p>  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+        <section id="prep-time">
+          <h3>Preparation time</h3>
+          <ul>
+            <li><strong>Total</strong>: Approximately 10 minutes</li>
+            <li><strong>Preparation</strong>: 5 minutes</li>
+            <li><strong>Cooking</strong>: 5 minutes</li>
+          </ul>
+        </section>
+      </header>
+      <section id="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>2-3 large eggs</li>
+          <li>Salt, to taste</li>
+          <li> Pepper, to taste</li>
+          <li>1 tablespoon of butter or oil</li>
+          <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Instructions</h2>
+        <ol>
+          <li><strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
   You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li><b>Heat the pan:</b>Place a non-stick frying pan over medium heat and add butter or oil.</li>
-        <li><b>Cook the omelette:</b>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+          <li><strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li><strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
   the eggs evenly coat the surface.</li>
-        <li><b>Add fillings (optional):</b>When the eggs begin to set at the edges but are still slightly runny in the 
+          <li><strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly runny in the 
   middle, sprinkle your chosen fillings over one half of the omelette.</li>
-        <li><b>Fold and serve:</b>As the omelette continues to cook, carefully lift one edge and fold it over the 
+          <li><strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over the 
   fillings. Let it cook for another minute, then slide it onto a plate.</li>
-        <li><b>Enjoy:</b>Serve hot, with additional salt and pepper if needed.</li>
-      </ol>
-    </section>
-    <section>
-      <h2>Nutrition</h2>
-      <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table>
-        <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
-        </tr>
-        <tr>
-          <td>Carbs</td>
-          <td>0g</td>
-        </tr>
-        <tr>
-          <td>Protein</td>
-          <td>20g</td>
-        </tr>
-        <tr>
-          <td>Fat</td>
-          <td>22g</td>
-        </tr>
-      </table>
-    </section>
+          <li><strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+      </section>
+
+      <section>
+        <h2>Nutrition</h2>
+        <p>The table below shows nutritional values per serving without the additional fillings.</p>
+        <table>
+          <tr>
+            <td>Calories</td>
+            <td>277kcal</td>
+          </tr>
+          <tr>
+            <td>Carbs</td>
+            <td>0g</td>
+          </tr>
+          <tr>
+            <td>Protein</td>
+            <td>20g</td>
+          </tr>
+          <tr>
+            <td>Fat</td>
+            <td>22g</td>
+          </tr>
+        </table>
+      </section>
+    </article>
   </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Tafadzwa Ruzvidzo</a>.
+    Coded by <a href="#">Taffadzwa Ruzvidzo</a>.
   </footer>
 </body>
 </html>
